# backend

./: .env  .env.example  compose.yml  pyproject.toml  realm-export.json  ruff.toml
authentication/: keycloak.py  urls.py  views.py
db/: init-db.sh  init.sql
images/: admin.py  models.py  serializers.py  urls.py  views.py
images/migrations/: 0001_initial.py
mailer/: admin.py  models.py  serializer.py  urls.py  views.py
mailer/migrations/: 0001_initial.py  0002_mailer_created_at.py
pages/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_pages_description_alter_pages_title.py  0003_pages_url.py  0004_remove_pages_url_pages_slug_alter_pages_description_and_more.py  0005_alter_pages_options_alter_pages_slug.py  0006_alter_pages_slug.py  0007_alter_pages_slug.py  0008_alter_pages_slug.py  0009_pages_image.py
project/: settings.py  urls.py
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_rename_lastupdate_projects_last_update_and_more.py  0003_alter_projects_options_alter_projects_last_update_and_more.py  0004_projects_skills.py  0005_alter_projects_last_update_alter_projects_start.py  0006_alter_projects_title.py
skills/: admin.py  models.py  serializers.py  urls.py  views.py
skills/migrations/: 0001_initial.py  0002_alter_skills_title.py
utils/: case_change.py  to_json.py
webapi/: settings.py  urls.py
